package com.example.myhealth;


import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class Test3 {
    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
    @Test
    public void test3() {
        onView(withId(R.id.txtFirstName)).perform(typeText("Ayodeji"), closeSoftKeyboard());
        onView(withId(R.id.txtLastName)).perform(typeText("Ejiade"), closeSoftKeyboard());
        onView(withId(R.id.txtEmailAddress)).perform(typeText("ayodeji.ejiadettu.edu"), closeSoftKeyboard());
        onView(withId(R.id.btnNext)).perform(click());
        onView(withText("Input Error")).check(matches(isDisplayed()));
    }

}
